# arcana

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  generate_all.js  justfile
.github/workflows/: deploy.yml
assets-src/inventory/: consumables.ron  perks.ron  wearables.ron
assets-src/language/: en.json  es.json  nl.json
assets/data/: ability_catalog.json  equipment_catalog.json  perk_catalog.json
assets/i18n/: translations.json
assets/inventory/: abilities.ron  armor.ron  consumables.ron  perks.ron  weapons.ron  wearables.ron
assets/language/: en.json  es.json  nl.json
assets/map/: Bushe1.tsx  Bushe2.tsx  Bushe3.tsx  Bushe4.tsx  Rock1.tsx  Rock4.tsx  Sheep_Idle.tsx  Stump 1.tsx  Stump 3.tsx  Tree1.tsx  Tree2.tsx  Tree3.tsx  Water Rocks_01.tsx  Water Rocks_02.tsx  Water Rocks_03.tsx  Water Rocks_04.tsx  tiles3.tsx
docs/: index.html
saves/: settings.json
src/: asset_pak.rs  main.rs  utils.rs
src/core/: abilities.rs  actions.rs  assets.rs  audio.rs  camera.rs  catalog.rs  classes.rs  compat.rs  constants.rs  consumables.rs  game_state.rs  localization.rs  mod.rs  monsters.rs  network.rs  perks.rs  persistence.rs  pet.rs  pets.rs  player.rs  races.rs  settings.rs  states.rs  systems.rs  utils.rs  weapons.rs
src/core/actions/: craft.rs  duel.rs  hunt.rs  mod.rs  quest.rs  rest.rs  shop.rs  study.rs  train.rs  work.rs
src/core/catalog/: abilities.rs  artifacts.rs  catalog.rs  consumables.rs  effects.rs  equipment.rs  mod.rs  modifiers.rs  perks.rs  weapons.rs  wearables.rs
src/core/combat/: mechanics.rs  mod.rs  precombat.rs  ui.rs
src/core/inventory/: abilities.rs  armor.rs  effects.rs  equipment.rs  mod.rs  modifiers.rs  perks.rs  weapons.rs
src/core/menu/: buttons.rs  settings.rs  systems.rs  utils.rs
src/core/rules/: abilities.rs  items.rs  mod.rs
src/core/systems/: actions.rs  combat_engine.rs  mod.rs  network_sync.rs
src/core/ui/: button.rs  combat.rs  creation.rs  dropdown.rs  duels.rs  level_up.rs  menu.rs  mod.rs  modal.rs  planning.rs  playing.rs  scrollbar.rs  shop.rs  theme.rs  toast.rs  tooltip.rs  utils.rs
