[package]
name = "arcana"
version = "0.1.0"
edition = "2021"
default-run = "arcana"
authors = ["Mavs"]

# The `build` binary name is reserved by Cargo, so we declare it explicitly.
[[bin]]
name = "build-assets"
path = "src/bin/build.rs"

# Feature flags for the build pipeline
# process-assets: copy assets-src/ → assets/ and convert PNG → KTX2 (requires toktx)
# generate-catalogs: regenerate inventory RON files when catalog_gen.rs / build images change
[features]
default = ["process-assets", "generate-catalogs"]
process-assets = []
generate-catalogs = []

[dependencies]
bevy = { version = "0.19.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "debug",
    "default_font",
    "ktx2",
    "png",
    "serialize",
    "sprite_picking",
    "ui_picking",
    "webgl2",
    "x11",
    "zstd_rust",
]}
bevy_kira_audio = "0.26.0-rc.1"
gpu-allocator = "0.28.0"
itertools = "0.14.0"
rand = "0.10.1"
regex = "1.12.4"
ron = "0.12.1"
serde_json = "1.0.150"
serde = "1.0.228"
strum = "0.28.0"
strum_macros = "0.28.0"

[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25.9"
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.19.0-rc.2", default-features = false, features = ["multi_threaded"] }
bimap = "0.6.3"
bincode = { version = "2.0.1", features = ["serde"] }
rfd = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Used by many dependencies and require feature flag for wasm
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom_v2 = { package = "getrandom", version = "0.2.17", features = ["js"] }
getrandom_v4 = { package = "getrandom", version = "0.4.1", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
